# 18c-ParameterConvergence

./: .gitignore  CMakeLists.txt  README.md  TrainingHardwareData.eps  converge_beta.cpp  graph_beta_values.py  graph_xcom_values.py  recoverBeta.cpp
converge_beta/: CMakeLists.txt  converge_beta.cpp  custom2comfullbalancenotolunsafe.txt
converge_beta_opt/: CMakeLists.txt  converge_beta_opt.cpp
data_analysis/: graph_beta_values.py  graph_beta_values_hardware.py  graph_many_xcom_values.py  graph_xcom_values.py  graph_xcom_values_hardware.py
param_converge/: file_ops.cpp  gen_phi_matrix.cpp  gen_phi_matrix.hpp
param_converge/filter_converge_train/: CMakeLists.txt  filter_converge_train.cpp
param_converge/filter_training_set/: CMakeLists.txt  filter_training_set.cpp
param_converge/test_beta/: CMakeLists.txt  betaVectorsIdeal.txt  randomOptPoses10000.txt  test_beta.cpp
param_converge/test_many_beta/: CMakeLists.txt
param_converge/train_beta/: CMakeLists.txt  train_beta.cpp
param_converge/train_many_beta/: CMakeLists.txt
test_beta/: CMakeLists.txt  random50nonebalancenotolunsafe.txt  test_beta.cpp
